# RaftDrive

./: .env.example  CMakeLists.txt  Dockerfile  README.md  SPEC.md  Setup  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.local.json
assets/: Demo.mkv  RaftDrive.drawio
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: driveApi.ts
frontend/src/types/: drive.ts
kvcluster/: CMakeLists.txt  main.cpp  service_kv_grpc.hpp  service_raft_grpc.hpp
kvcluster/backends/: backend_abstract.hpp  backend_kvRaft.hpp
kvcluster/kvserver/: kvhelper.hpp  kvserver.cpp  kvserver.hpp  models.hpp
kvcluster/raft/: apply_channel.hpp  logger.hpp  persister.cpp  persister.hpp  raft.cpp  raft.hpp  raft_types.hpp  threadpool.hpp
kvcluster/transport/: client_abstract.hpp  client_raft_abstract.hpp  client_raft_grpc.hpp
proto/: kvstore.proto  raft.proto
raftdrive/: CMakeLists.txt  main.cpp
raftdrive/api/: router.hpp
raftdrive/clients/: kv_grpc_client.hpp
raftdrive/handlers/: handler_fs.hpp
raftdrive/models/: drive_models.hpp
raftdrive/services/: service_fs.cpp  service_fs.hpp  service_metadata.cpp  service_metadata.hpp  service_storage.cpp  service_storage.hpp
scripts/: entrypoint-kvnode.sh  entrypoint-raftdrive.sh  init-localstack.sh
